force-app/main/default/objects/Revenue_Contract_Waterfall__c/Revenue_Contract_Waterfall__c.object-meta.xml
<CustomObject>
    <label>Revenue Contract Waterfall</label>
    <nameField>
        <displayFormat>WF-{000}</displayFormat>
        <label>Revenue Waterfall Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Contract Waterfalls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>