force-app/main/default/objects/Revenue_Contract_Waterfall__c/fields/Accounting_Period__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Period__c</fullName>
    <label>Accounting Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>