force-app/main/default/objects/Revenue_Contract_Waterfall__c/fields/Functional_Amount__c.field-meta.xml
<CustomField>
    <fullName>Functional_Amount__c</fullName>
    <label>Functional Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>