force-app/main/default/objects/Revenue_Contract_Waterfall__c/fields/Functional_Currency__c.field-meta.xml
<CustomField>
    <fullName>Functional_Currency__c</fullName>
    <label>Functional Currency</label>
    <length>80</length>
    <type>Text</type>
</CustomField>