force-app/main/default/objects/Revenue_Contract_Waterfall__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <label>Order Product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>