force-app/main/default/objects/Revenue_Contract_Waterfall__c/fields/Period_Label__c.field-meta.xml
<CustomField>
    <fullName>Period_Label__c</fullName>
    <formula>Year__c + &apos; | &apos; +  Waterfall_Period__c + &apos; (&apos; + CASE(Waterfall_Period__c, &apos;01&apos;,&apos;JAN&apos;, &apos;02&apos;,&apos;FEB&apos;, &apos;03&apos;,&apos;MAR&apos;, &apos;04&apos;,&apos;APR&apos;, &apos;05&apos;,&apos;MAY&apos; , &apos;06&apos;,&apos;JUN&apos; , &apos;07&apos;,&apos;JUL&apos; , &apos;08&apos;,&apos;AUG&apos; , &apos;09&apos;,&apos;SEP&apos; , &apos;10&apos;,&apos;OCT&apos; , &apos;11&apos;,&apos;NOV&apos; , &apos;12&apos;,&apos;DEC&apos; ,&apos;1&apos;,&apos;JAN&apos;, &apos;2&apos;,&apos;FEB&apos;, &apos;3&apos;,&apos;MAR&apos;, &apos;4&apos;,&apos;APR&apos;, &apos;5&apos;,&apos;MAY&apos; , &apos;6&apos;,&apos;JUN&apos; , &apos;7&apos;,&apos;JUL&apos; , &apos;8&apos;,&apos;AUG&apos; , &apos;9&apos;,&apos;SEP&apos; ,&apos;&apos;) + &apos;)&apos;</formula>
    <label>Period Label</label>
    <type>Text</type>
</CustomField>