force-app/main/default/objects/Revenue_Contract_Waterfall__c/fields/Reporting_Currency__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Currency__c</fullName>
    <label>Reporting Currency</label>
    <length>80</length>
    <type>Text</type>
</CustomField>