force-app/main/default/objects/Revenue_Contract_Waterfall__c/fields/Revenue_Contract_GUID__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contract_GUID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Contract</label>
    <referenceTo>Revenue_Contract__c</referenceTo>
    <relationshipLabel>Revenue Contract Waterfalls</relationshipLabel>
    <relationshipName>Revenue_Contract_Waterfalls</relationshipName>
    <type>Lookup</type>
</CustomField>