force-app/main/default/objects/Revenue_Contract_Waterfall__c/fields/Revenue_Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contract_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Contract Line</label>
    <referenceTo>Revenue_Contract_Line__c</referenceTo>
    <relationshipLabel>Revenue Contract Waterfalls</relationshipLabel>
    <relationshipName>Revenue_Contract_Waterfalls</relationshipName>
    <type>Lookup</type>
</CustomField>