force-app/main/default/objects/Revenue_Contract_Waterfall__c/fields/Revenue_Contract_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contract_Line_Id__c</fullName>
    <label>Revenue Contract Line Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>