force-app/main/default/objects/Revenue_Contract_Waterfall__c/fields/Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type__c</fullName>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contractual Revenue</fullName>
            </value>
            <value>
                <fullName>Carves Revenue</fullName>
            </value>
            <value>
                <fullName>Net Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>