force-app/main/default/objects/Revenue_Contract_Waterfall__c/fields/Transaction_Currency__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Currency__c</fullName>
    <label>Transaction Currency</label>
    <length>80</length>
    <type>Text</type>
</CustomField>