force-app/main/default/objects/Revenue_Contract_Waterfall__c/fields/Waterfall_Guid__c.field-meta.xml
<CustomField>
    <fullName>Waterfall_Guid__c</fullName>
    <externalId>true</externalId>
    <label>Waterfall Guid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>