force-app/main/default/objects/Revenue_Contract_Waterfall__c/fields/Waterfall_Period__c.field-meta.xml
<CustomField>
    <fullName>Waterfall_Period__c</fullName>
    <label>Waterfall Period</label>
    <length>80</length>
    <type>Text</type>
</CustomField>