force-app/main/default/objects/Revenue_Contract_Waterfall__c/fields/Waterfall_Type__c.field-meta.xml
<CustomField>
    <fullName>Waterfall_Type__c</fullName>
    <label>Waterfall Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recognized</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>