force-app/main/default/objects/Revenue_Contract_Waterfall__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Schedule_Type__c</columns>
    <columns>Waterfall_Type__c</columns>
    <columns>NAME</columns>
    <columns>Revenue_Contract_GUID__c</columns>
    <columns>Accounting_Period__c</columns>
    <columns>Period_Label__c</columns>
    <columns>Waterfall_Period__c</columns>
    <columns>Year__c</columns>
    <columns>Transaction_Currency__c</columns>
    <columns>Transaction_Amount__c</columns>
    <columns>Functional_Currency__c</columns>
    <columns>Functional_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>